<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/bg">

    <Button
        android:layout_height="100dp"
        android:id="@+id/vol_up_button"
        android:text="@string/volup"
        android:onClick="onClick"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/ipaddress_input"
        android:layout_alignParentStart="true" />

    <Button android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/vol_down_button"
        android:text="@string/voldown"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"
        android:layout_alignTop="@+id/vol_up_button"
        android:layout_toEndOf="@+id/vol_up_button"
        android:layout_above="@+id/mute_button" />
    <Button
        android:layout_height="100dp"
        android:id="@+id/mute_button"
        android:text="@string/mute"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/vol_up_button"
        android:layout_alignEnd="@+id/vol_up_button" />

    <Button
        android:layout_height="100dp"
        android:id="@+id/shutdown_button"
        android:text="@string/shutdown"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_below="@+id/vol_up_button"
        android:layout_toEndOf="@+id/vol_up_button" />


    <Button
        android:layout_height="100dp"
        android:id="@+id/pause_button"
        android:text="@string/pause"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_below="@+id/mute_button"
        android:layout_alignParentLeft="true" />


    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ip_address_label"
        android:text="@string/ipaddress"
        android:layout_width="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ipaddress_input"
        android:layout_gravity="right"
        android:layout_below="@+id/ip_address_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>